Responsive modal dialog

--- a/examples/wrapping.html
+++ b/examples/wrapping.html
@@ -54,7 +54,7 @@
                 <p>A paragraph with <math-item>x<sup>2</sup></math-item> inline math.
                 And a <span class="math-item">y<sub>3</sub></span> span.</p>
 
-                <math-item style="font-size: 200%;" display="inline">
+                <math-item style="font-size: 200%;">
                     x<sub>k</sub>
                 </math-item>
 
