Fix eqn image paths

--- a/examples/wrapping.html
+++ b/examples/wrapping.html
@@ -128,7 +128,7 @@
 
                 <p>
                     A paragraph with <math-item handler="eqnstore">
-                        <img src="../../media/img-eqn-inline.png" style="width: 4.77em; vertical-align: -0.12em;">
+                        <img src="../media/img-eqn-inline.png" style="width: 4.77em; vertical-align: -0.12em;">
                         <script type="application/mathml+xml">
                             <math>
                                 <mrow>
@@ -147,7 +147,7 @@
                 </p>
 
                 <math-item handler="eqnstore">
-                    <img src="../../media/img-eqn-block.png" style="width: 22.98em; vertical-align: -2.27em;">
+                    <img src="../media/img-eqn-block.png" style="width: 22.98em; vertical-align: -2.27em;">
                     <script type="application/mathml+xml">
                         <math display="block">
                             <mrow>
