--- a/examples/wrapping.html
+++ b/examples/wrapping.html
@@ -16,7 +16,7 @@
             showMathMenu: false
         });
     </script>
-    <script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script src="http://cdn.mathjax.org/mathjax/2.4-latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <!--<script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>-->
     <style>
         p > math-item, math-item[display="inline"], span.math-item {
