MathJax startup typeset always

--- a/examples/spherical.html
+++ b/examples/spherical.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
     <link rel="stylesheet" href="../dist/math-ui-twbs.css">
-    <script src="../libs/CustomElements.js"></script>
+    <script src="../dist/CustomElements.js"></script>
     <script src="../dist/math-item-twbs.js"></script>
     <script type="text/x-mathjax-config">
         MathJax.Hub.Config({
