--- a/examples/wrapping.html
+++ b/examples/wrapping.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
     <link rel="stylesheet" href="../dist/math-ui-twbs.css">
-    <!--<script src="../../dist/CustomElements.js"></script>-->
+    <script src="../dist/CustomElements.js"></script>
     <script src="../dist/math-item-twbs.js"></script>
     <script type="text/x-mathjax-config">
         MathJax.Hub.Config({
-            skipStartupTypeset: true,
+            skipStartupTypeset: false,
             showMathMenu: false
         });
     </script>
-    <script src="http://cdn.mathjax.org/mathjax/2.4-latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <!--<script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>-->
     <style>
         p > math-item, math-item[display="inline"], span.math-item {
