wrapping header EqnStore -> Images

--- a/examples/wrapping.html
+++ b/examples/wrapping.html
@@ -124,7 +124,7 @@
                     </math>
                 </math-item>
 
-                <h3>EqnStore</h3>
+                <h3>Images</h3>
 
                 <p>
                     A paragraph with <math-item handler="eqnstore">
