--- a/examples/wrapping.html
+++ b/examples/wrapping.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Legacy Math UI</title>
+    <title>Wrapping Different Math Renderers</title>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
     <link rel="stylesheet" href="../dist/math-ui-twbs.css">
-    <!--<script src="../../dist/CustomElements.js"></script>-->
+    <script src="../dist/CustomElements.js"></script>
     <script src="../dist/math-item-twbs.js"></script>
     <script type="text/x-mathjax-config">
         MathJax.Hub.Config({
-            skipStartupTypeset: true,
+            skipStartupTypeset: false,
             showMathMenu: false
         });
     </script>
@@ -44,7 +44,7 @@
 
             <div class="pure-u-1">
                 <small id="progress">started</small>
-                <h1>Legacy Math UI</h1>
+                <h1>Wrapping Different Math Renderers</h1>
             </div>
 
             <div class="pure-u-4-5">
@@ -124,7 +124,7 @@
                     </math>
                 </math-item>
 
-                <h3>EqnStore</h3>
+                <h3>Images</h3>
 
                 <p>
                     A paragraph with <math-item handler="eqnstore">
