--- a/examples/wrapping.html
+++ b/examples/wrapping.html
@@ -27,7 +27,7 @@
             text-align: center;
         }
         #container {
-            width: 50em;
+            width: 60em;
             max-width: 100%;
             margin: 0 auto;
         }
@@ -47,7 +47,7 @@
                 <h1>Wrapping Different Math Renderers</h1>
             </div>
 
-            <div class="pure-u-4-5">
+            <div class="pure-u-2-3">
 
                 <h3>Plain HTML</h3>
 
@@ -364,7 +364,8 @@
                     </script>
                 </math-item>
             </div>
-            <div class="pure-u-1-5">
+            <div class="pure-u-1-24"></div>
+            <div class="pure-u-7-24">
                 <h4>About</h4>
                 <p>This is a blog about bla bla bla...</p>
 
