--- a/examples/wrapping.html
+++ b/examples/wrapping.html
@@ -399,5 +399,21 @@
             </div>
         </div>
     </div>
+    <script>
+        (function () {
+            function ready() {
+                var $ = FlorianMath.mathUI.$;
+                $('#math-ui-dashboard-trigger').on('click', function (event) {
+                    event.preventDefault();
+                    event.stopPropagation();
+                    FlorianMath.mathUI.showDashboard();
+                });
+            }
+            if (FlorianMath.mathUI)
+                ready();
+            else
+                FlorianMath.addCustomEventListener(document, 'ready.math-ui', ready);
+        })();
+    </script>
 </body>
 </html>
