Ctrl+C, drag-n-drop

--- a/examples/spherical.html
+++ b/examples/spherical.html
@@ -1519,14 +1519,18 @@
     </div>
     <script>
         (function () {
-            /*FlorianMath.lookAndFeel.then(function (lnf) {
-                var $ = FlorianMath.jQueryLib;
-                $('#math-ui-dashboard-trigger').on('click', function (event) {
+            function ready() {
+                var mathUI = FlorianMath.mathUI;
+                mathUI.$('#math-ui-dashboard-trigger').on('click', function (event) {
                     event.preventDefault();
                     event.stopPropagation();
-                    lnf.showDashboard();
+                    mathUI.showDashboard();
                 });
-            });*/
+            }
+            if (FlorianMath.mathUI)
+                ready();
+            else
+                FlorianMath.addCustomEventListener(document, 'ready.math-ui', ready);
         })();
     </script>
 </body>
