Ctrl+C, drag-n-drop

--- a/examples/spherical.html
+++ b/examples/spherical.html
@@ -1520,11 +1520,11 @@
     <script>
         (function () {
             function ready() {
-                var $ = FlorianMath.mathUI.$;
-                $('#math-ui-dashboard-trigger').on('click', function (event) {
+                var mathUI = FlorianMath.mathUI;
+                mathUI.$('#math-ui-dashboard-trigger').on('click', function (event) {
                     event.preventDefault();
                     event.stopPropagation();
-                    FlorianMath.mathUI.showDashboard();
+                    mathUI.showDashboard();
                 });
             }
             if (FlorianMath.mathUI)
