Adapting to usage attribute changes

--- a/examples/wrapping.html
+++ b/examples/wrapping.html
@@ -149,7 +149,7 @@
                 <p>
                     A paragraph with <math-item>
                         <math-source type="image/png" src="../media/img-eqn-inline.png" width="4.77em" valign="-0.12em"></math-source>
-                        <math-source type="application/mathml+xml" usage="norender">
+                        <math-source type="application/mathml+xml" usage="markup">
                             <math>
                                 <mrow>
                                     <mi mathvariant="script">H</mi>
@@ -168,7 +168,7 @@
 
                 <math-item>
                     <math-source type="image/png" src="../media/img-eqn-block.png" width="22.98em" valign="-2.27em"></math-source>
-                    <math-source type="application/mathml+xml" usage="norender">
+                    <math-source type="application/mathml+xml" usage="markup">
                         <math display="block">
                             <mrow>
                                 <mrow>
