sidebar menu WIP

--- a/examples/spherical.html
+++ b/examples/spherical.html
@@ -1519,7 +1519,7 @@
             </div>
         </div>
     </div>
-    <div id="math-ui-viewport">
+    <!--<div id="math-ui-viewport">
     <div id="math-ui-bar" class="math-ui">
         <div class="panel panel-primary">
             <div class="panel-heading">
@@ -1548,7 +1548,7 @@
             </div>
         </div>
     </div>
-    </div>
+    </div>-->
     <script>
         (function () {
             function ready() {
