--- a/examples/wrapping.html
+++ b/examples/wrapping.html
@@ -57,6 +57,7 @@
     </style>
 </head>
 <body>
+    <div id="main">
     <div id="container">
 
         <div class="pure-g">
@@ -399,7 +400,7 @@
             </div>
         </div>
     </div>
-
+    </div>
     <script>
         (function () {
             function ready() {
