--- a/examples/spherical.html
+++ b/examples/spherical.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -16,7 +16,7 @@
             menuSettings: {CHTMLpreview: false}
         });
     </script>
-    <script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=MML_HTMLorMML"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=MML_HTMLorMML"></script>
 
     <!-- math-item -->
     <script src="../bower_components/math-item/math-item.js"></script>
