--- a/examples/wrapping.html
+++ b/examples/wrapping.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -27,7 +27,7 @@
         menuSettings: {CHTMLpreview: false}
         });
     </script>
-    <script src="http://cdn.mathjax.org/mathjax/2.4-latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
     <script src="../bower_components/math-item/mathjax-tex.js"></script>
     <script src="../bower_components/math-item/mathjax-mml.js"></script>
